Resolve "Align clear answers button to the right"

--- a/src/app/components/designer/training-definition/levels/level-configuration/questions/extended-matching-items/extended-matching-items.component.css
+++ b/src/app/components/designer/training-definition/levels/level-configuration/questions/extended-matching-items/extended-matching-items.component.css
@@ -75,6 +75,7 @@ mat-divider {
 
 button.clear-answers {
   width: 120px;
+  float: right;
 }
 
 p.note {
